--- a/Website.html
+++ b/Website.html
@@ -10,19 +10,9 @@
     href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 </head>
 <body>
-    
-
-    <p></p>
+    <header>
+        <a href="#" class="logo"><img src="logo.png" alt="" srcset=""></a>
+    </header>
+    <script src="main.js"></script>
 </body>
-
-
-
-
-
-
-
-
-
-
 </html>
-
