--- a/Website.html
+++ b/Website.html
@@ -12,6 +12,16 @@
 <body>
     <header>
         <a href="#" class="logo"><img src="logo.png" alt="" srcset=""></a>
+
+        <div class="bx bx-menu" id="menu-icon"></div>
+
+        <ul class="navbar">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#ride">Ride</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#reviwes">Reviews</a></li>
+        </ul>
     </header>
     <script src="main.js"></script>
 </body>
