--- a/Website.html
+++ b/Website.html
@@ -22,6 +22,10 @@
             <li><a href="#about">About</a></li>
             <li><a href="#reviwes">Reviews</a></li>
         </ul>
+        <div class="header-btn">
+            <a href="#">Sign Up</a>
+            <a href="#">Sign In</a>
+        </div>
     </header>
     <script src="main.js"></script>
 </body>
