--- a/Website.html
+++ b/Website.html
@@ -23,6 +23,25 @@
             <li><a href="#reviwes">Reviews</a></li>
         </ul>
     </header>
+    <!--Krahjeta-->
+<section class="home" id="home">
+    <div class="text">
+        <h1><span>Looking</span> to<br> renta car</h1>
+        <div class="app-store">
+            <img src="C:\Users\Krahjeta\Desktop\projektPNG\Porsche-911.png" alt="Porsche backgroung " >
+            <p>Download now on App Store and Google Play</p>
+            <img src="C:\Users\Krahjeta\Desktop\projektPNG\appStore.webp" alt="Aplikacioni IOS"width="120" height="80">
+            >
+            <img src="C:\Users\Krahjeta\Desktop\projektPNG\googlePlay.webp" alt="Aplikacioni Android" width="120" height="80">
+
+        </div>
+
+
+    </div>
+
+</section>
+
+
     <script src="main.js"></script>
 </body>
 </html>
