--- a/Website.html
+++ b/Website.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewsport" content="width=device-width, inital-scale=1.0">
+    <meta name="viewport" content="width=device-width, inital-scale=1.0">
     <title>Car Rental Website</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet"
@@ -20,17 +20,17 @@
             <li><a href="#ride">Ride</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#reviwes">Reviews</a></li>
+            <li><a href="#reviews">Reviews</a></li>
         </ul>
         <div class="header-btn">
-            <a href="#">Sign Up</a>
-            <a href="#">Sign In</a>
+            <a href="#" class="sign-up">Sign Up</a>
+            <a href="#" class="sign-in">Sign In</a>
         </div>
     </header>
     <!--Krahjeta-->
 <section class="home" id="home">
     <div class="text">
-        <h1><span>Looking</span> to<br> renta car</h1>
+        <h1><span>Looking</span> to<br> rent a car</h1>
         <div class="app-store">
             <img src="C:\Users\Krahjeta\Desktop\projektPNG\Porsche-911.png" alt="Porsche backgroung " >
             <p>Download now on App Store and Google Play</p>
