--- a/Website.html
+++ b/Website.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, inital-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Car Rental Website</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet"
@@ -30,12 +30,11 @@
     <!--Krahjeta-->
 <section class="home" id="home">
     <div class="text">
-        <h1><span>Looking</span> to<br> rent a car</h1>
+        <h1><span>Looking</span> for a <br> car to rent?</h1>
         <div class="app-store">
             <img src="C:\Users\Krahjeta\Desktop\projektPNG\Porsche-911.png" alt="Porsche backgroung " >
             <p>Download now on App Store and Google Play</p>
             <img src="C:\Users\Krahjeta\Desktop\projektPNG\appStore.webp" alt="Aplikacioni IOS"width="120" height="80">
-            >
             <img src="C:\Users\Krahjeta\Desktop\projektPNG\googlePlay.webp" alt="Aplikacioni Android" width="120" height="80">
 
         </div>
@@ -43,6 +42,26 @@
 
     </div>
 
+</section>
+<!--elzaabout-->
+<section class="about" id="about">
+    <div class="heading">
+        <span>About Us</span>
+        <h1>Best Customer Experience</h1>
+    </div>
+    <div class="about-container">
+        <div class="about-img">
+            <img src="about.avif" alt="">
+        </div>
+        <div class="about-text">
+            <span>About Us</span>
+            <p>Welcome to our car rental website, your trusted partner for reliable and affordable car rentals. Whether it's a weekend getaway, a family vacation, or a business trip, we have the perfect vehicle for your journey.</p>
+            <p>Our mission is to make car rentals easy, accessible, and hassle-free. With a diverse fleet of well-maintained vehicles, competitive pricing, and flexible rental terms, we're here to ensure your travel plans go smoothly. From compact cars to spacious SUVs, we've got you covered.</p>
+            <p>Your comfort and safety are our top priorities. Every vehicle is regularly inspected and sanitized to meet the highest standards. Plus, with our friendly customer support team available 24/7, help is always just a call away.</p>
+            <p>Thank you for choosing our website. Let's hit the road together! Whether it's a short trip or a grand adventure, we're here to make your travels unforgettable. </p>
+            <a href="#" class="btn">Learn More</a>
+        </div>
+    </div>
 </section>
 
 
