--- a/Website.html
+++ b/Website.html
@@ -31,11 +31,11 @@
 <section class="home" id="home">
     <div class="text">
         <h1><span>Looking</span> for a <br> car to rent?</h1>
+        <p>Download now on App Store and Google Play</p>
         <div class="app-store">
-            <img src="C:\Users\Krahjeta\Desktop\projektPNG\Porsche-911.png" alt="Porsche backgroung " >
-            <p>Download now on App Store and Google Play</p>
-            <img src="C:\Users\Krahjeta\Desktop\projektPNG\appStore.webp" alt="Aplikacioni IOS"width="120" height="80">
-            <img src="C:\Users\Krahjeta\Desktop\projektPNG\googlePlay.webp" alt="Aplikacioni Android" width="120" height="80">
+            
+              <img src="appStore.webp" alt="Aplikacioni IOS"width="410" height="122 " style="margin-bottom: 1rem;">
+              <img src="googlePlay.webp" alt="Aplikacioni Android" width="410" height="122" style="margin-inline-start: 30px;">
 
         </div>
 
