--- a/Website.html
+++ b/Website.html
@@ -27,6 +27,39 @@
             <a href="#" class="sign-in">Sign In</a>
         </div>
     </header>
+<!--Krahjeta-->
+   <div class="modal" id="signUpModal">
+   <div class="modal-content">
+    <span class="close" id="closeSignUp">&times;</span>
+    <h2>Sign Up</h2>
+    <form id="signUpForm">
+        <label for="signUpUsername">Username:</label>
+        <input type="text" id="signUpUsername" placeholder="Enter Username" required>
+        <label for="signUpEmail">Email:</label>
+        <input type="email" id="signUpEmail" placeholder="Enter Email" required>
+        <label for="signUpPassword">Password:</label>
+        <input type="password" id="signUpPassword" placeholder="Enter password" required>
+        <button type="submit">Sign Up</button>
+    </form>
+
+   </div>
+   </div>
+
+   <div class="modal" id="signInModal">
+    <div class="modal-content">
+     <span class="close" id="closeSignUp">&times;</span>
+     <h2>Sign In</h2>
+     <form id="signInForm">
+        <label for="signInEmail">Email:</label>
+        <input type="email" id="signInEmail" placeholder="Enter Email" required>
+        <label for="signInPassword">Password:</label>
+        <input type="password" id="signInPassword" placeholder="Enter password" required>
+        <button type="submit">Sign In</button>
+     </form>
+    </div>
+   </div>
+
+
     <!--Krahjeta-->
 <section class="home" id="home">
     <div class="text">
@@ -34,7 +67,7 @@
         <p>Download now on App Store and Google Play</p>
         <div class="app-store">
             
-              <img src="appStore.webp" alt="Aplikacioni IOS"width="410" height="122 " style="margin-bottom: 1rem;">
+              <img src="appStore.webp" alt="Aplikacioni IOS"width="410" height="122 " style="margin-bottom: 1rem;" style="margin-inline-start: 10px;">
               <img src="googlePlay.webp" alt="Aplikacioni Android" width="410" height="122" style="margin-inline-start: 30px;">
 
         </div>
