--- a/Website.html
+++ b/Website.html
@@ -63,14 +63,32 @@
     <!--Krahjeta-->
 <section class="home" id="home">
     <div class="text">
-        <h1><span>Looking</span> for a <br> car to rent?</h1>
+        <h1><span>Looking</span> for a <br>car to rent?</h1>
         <p>Download now on App Store and Google Play</p>
         <div class="app-store">
             
-              <img src="appStore.webp" alt="Aplikacioni IOS"width="410" height="122 " style="margin-bottom: 1rem;" style="margin-inline-start: 10px;">
-              <img src="googlePlay.webp" alt="Aplikacioni Android" width="410" height="122" style="margin-inline-start: 30px;">
+              <img src="appStore.webp" alt="Aplikacioni IOS"width="250" height="74" >
+              <img src="googlePlay.webp" alt="Aplikacioni Android" width="250" height="74" style="margin-inline-start: 10px;">
 
         </div>
+        <div class="form-container">
+            <form action="">
+                <div class="input-box">
+                    <span>Location</span>
+                    <input type="search" name="" id="" placeholder="Search Places">
+                </div>
+                <div class="input-box">
+                    <span>Pick-Up Data</span>
+                    <input type="date" name="" id="">
+                </div>
+                <div class="input-box">
+                    <span>Return Date</span>
+                    <input type="date" name="" id="">
+                </div>
+                <input type="submit" name="" id="" class="btn">
+            </form>
+        </div>
+
 
 
     </div>
