--- a/Website.html
+++ b/Website.html
@@ -35,10 +35,13 @@
     <form id="signUpForm">
         <label for="signUpUsername">Username:</label>
         <input type="text" id="signUpUsername" placeholder="Enter Username" required>
+        <ion-icon name="person-outline" class="icon"></ion-icon>
         <label for="signUpEmail">Email:</label>
         <input type="email" id="signUpEmail" placeholder="Enter Email" required>
+        <ion-icon name="mail-outline" class="icon"></ion-icon>
         <label for="signUpPassword">Password:</label>
         <input type="password" id="signUpPassword" placeholder="Enter password" required>
+        <ion-icon name="lock-closed-outline" class="icon"></ion-icon>
         <button type="submit">Sign Up</button>
     </form>
 
@@ -52,8 +55,10 @@
      <form id="signInForm">
         <label for="signInEmail">Email:</label>
         <input type="email" id="signInEmail" placeholder="Enter Email" required>
+        <ion-icon name="mail-outline" class="icon"></ion-icon>
         <label for="signInPassword">Password:</label>
         <input type="password" id="signInPassword" placeholder="Enter password" required>
+        <ion-icon name="lock-closed-outline" class="icon"></ion-icon>
         <button type="submit">Sign In</button>
      </form>
     </div>
@@ -117,5 +122,7 @@
 
 
     <script src="main.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
