--- a/Website.html
+++ b/Website.html
@@ -34,14 +34,20 @@
     <h2>Sign Up</h2>
     <form id="signUpForm">
         <label for="signUpUsername">Username:</label>
+        <div class="input-container">
         <input type="text" id="signUpUsername" placeholder="Enter Username" required>
         <ion-icon name="person-outline" class="icon"></ion-icon>
+        </div>
         <label for="signUpEmail">Email:</label>
+        <div class="input-container">
         <input type="email" id="signUpEmail" placeholder="Enter Email" required>
         <ion-icon name="mail-outline" class="icon"></ion-icon>
+        </div>
         <label for="signUpPassword">Password:</label>
+        <div class="input-container">
         <input type="password" id="signUpPassword" placeholder="Enter password" required>
         <ion-icon name="lock-closed-outline" class="icon"></ion-icon>
+        </div>
         <button type="submit">Sign Up</button>
     </form>
 
@@ -54,11 +60,15 @@
      <h2>Sign In</h2>
      <form id="signInForm">
         <label for="signInEmail">Email:</label>
+        <div class="input-container">
         <input type="email" id="signInEmail" placeholder="Enter Email" required>
         <ion-icon name="mail-outline" class="icon"></ion-icon>
+        </div>
         <label for="signInPassword">Password:</label>
+        <div class="input-container">
         <input type="password" id="signInPassword" placeholder="Enter password" required>
         <ion-icon name="lock-closed-outline" class="icon"></ion-icon>
+        </div>
         <button type="submit">Sign In</button>
      </form>
     </div>
