--- a/Website.html
+++ b/Website.html
@@ -56,7 +56,7 @@
 
    <div class="modal" id="signInModal">
     <div class="modal-content">
-     <span class="close" id="closeSignUp">&times;</span>
+     <span class="close" id="closeSignIn">&times;</span>
      <h2>Sign In</h2>
      <form id="signInForm">
         <label for="signInEmail">Email:</label>
@@ -82,8 +82,8 @@
         <p>Download now on App Store and Google Play</p>
         <div class="app-store">
             
-              <img src="appStore.webp" alt="Aplikacioni IOS"width="250" height="74" >
-              <img src="googlePlay.webp" alt="Aplikacioni Android" width="250" height="74" style="margin-inline-start: 10px;">
+              <img src="appStore.webp" alt="Aplikacioni IOS"width="200" height="54" >
+              <img src="googlePlay.webp" alt="Aplikacioni Android" width="200" height="54" style="margin-inline-start: 10px;">
 
         </div>
         <div class="form-container">
@@ -108,6 +108,70 @@
 
     </div>
 
+</section>
+
+<!--elzaservices-->
+<section class="services" id="services">
+    <div class="heading">
+        <span>Best Services</span>
+        <h1>Explore Our Top Deals <br> From Top Rated Dealers</h1>
+    </div>
+    <div class="services-container">
+        <div class="box">
+            <div class="box-img">
+                <img src="car1.jpg" alt="">
+            </div>
+            <p>2017</p>
+            <h3>Mercedes-Benz E63S</h3>
+            <h2>$58500 | $358 <span>/month</span></h2>
+            <a href="#" class="btn">Rent Now</a>
+        </div>
+        <div class="box">
+            <div class="box-img">
+                <img src="car2.jpg" alt="">
+            </div>
+            <p>2017</p>
+            <h3>Porsche 918 Spyder</h3>
+            <h2>$58500 | $358 <span>/month</span></h2>
+            <a href="#" class="btn">Rent Now</a>
+        </div>
+        <div class="box">
+            <div class="box-img">
+                <img src="car3.jpg" alt="">
+            </div>
+            <p>2017</p>
+            <h3>Audi R8</h3>
+            <h2>$58500 | $358 <span>/month</span></h2>
+            <a href="#" class="btn">Rent Now</a>
+        </div>
+        <div class="box">
+            <div class="box-img">
+                <img src="car4.jpg" alt="">
+            </div>
+            <p>2017</p>
+            <h3>Porsche 911</h3>
+            <h2>$58500 | $358 <span>/month</span></h2>
+            <a href="#" class="btn">Rent Now</a>
+        </div>
+        <div class="box">
+            <div class="box-img">
+                <img src="car5.jpg" alt="">
+            </div>
+            <p>2017</p>
+            <h3>BMW E30</h3>
+            <h2>$58500 | $358 <span>/month</span></h2>
+            <a href="#" class="btn">Rent Now</a>
+        </div>
+        <div class="box">
+            <div class="box-img">
+                <img src="car6.jpg" alt="">
+            </div>
+            <p>2017</p>
+            <h3>Mercedes-Benz GLC</h3>
+            <h2>$58500 | $358 <span>/month</span></h2>
+            <a href="#" class="btn">Rent Now</a>
+        </div>
+    </div>
 </section>
 <!--elzaabout-->
 <section class="about" id="about">
@@ -134,5 +198,6 @@
     <script src="main.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
 </body>
 </html>
