--- a/Website.html
+++ b/Website.html
@@ -93,7 +93,7 @@
                     <input type="search" name="" id="" placeholder="Search Places">
                 </div>
                 <div class="input-box">
-                    <span>Pick-Up Data</span>
+                    <span>Pick-Up Date</span>
                     <input type="date" name="" id="">
                 </div>
                 <div class="input-box">
@@ -103,11 +103,6 @@
                 <input type="submit" name="" id="" class="btn">
             </form>
         </div>
-
-
-
-    </div>
-
 </section>
 
 <!--elzaservices-->
