--- a/Website.html
+++ b/Website.html
@@ -16,11 +16,11 @@
         <div class="bx bx-menu" id="menu-icon"></div>
 
         <ul class="navbar">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#ride">Ride</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#reviews">Reviews</a></li>
+            <li><a href="Website.html">Home</a></li>
+            <li><a href="ride.html">Ride</a></li>
+            <li><a href="service.html">Services</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="reviews.html">Reviews</a></li>
         </ul>
         <div class="header-btn">
             <a href="#" class="sign-up">Sign Up</a>
@@ -103,90 +103,6 @@
                 <input type="submit" name="" id="" class="btn">
             </form>
         </div>
-</section>
-
-<!--elzaservices-->
-<section class="services" id="services">
-    <div class="heading">
-        <span>Best Services</span>
-        <h1>Explore Our Top Deals <br> From Top Rated Dealers</h1>
-    </div>
-    <div class="services-container">
-        <div class="box">
-            <div class="box-img">
-                <img src="car1.jpg" alt="">
-            </div>
-            <p>2017</p>
-            <h3>Mercedes-Benz E63S</h3>
-            <h2>$58500 | $358 <span>/month</span></h2>
-            <a href="#" class="btn">Rent Now</a>
-        </div>
-        <div class="box">
-            <div class="box-img">
-                <img src="car2.jpg" alt="">
-            </div>
-            <p>2017</p>
-            <h3>Porsche 918 Spyder</h3>
-            <h2>$58500 | $358 <span>/month</span></h2>
-            <a href="#" class="btn">Rent Now</a>
-        </div>
-        <div class="box">
-            <div class="box-img">
-                <img src="car3.jpg" alt="">
-            </div>
-            <p>2017</p>
-            <h3>Audi R8</h3>
-            <h2>$58500 | $358 <span>/month</span></h2>
-            <a href="#" class="btn">Rent Now</a>
-        </div>
-        <div class="box">
-            <div class="box-img">
-                <img src="car4.jpg" alt="">
-            </div>
-            <p>2017</p>
-            <h3>Porsche 911</h3>
-            <h2>$58500 | $358 <span>/month</span></h2>
-            <a href="#" class="btn">Rent Now</a>
-        </div>
-        <div class="box">
-            <div class="box-img">
-                <img src="car5.jpg" alt="">
-            </div>
-            <p>2017</p>
-            <h3>BMW E30</h3>
-            <h2>$58500 | $358 <span>/month</span></h2>
-            <a href="#" class="btn">Rent Now</a>
-        </div>
-        <div class="box">
-            <div class="box-img">
-                <img src="car6.jpg" alt="">
-            </div>
-            <p>2017</p>
-            <h3>Mercedes-Benz GLC</h3>
-            <h2>$58500 | $358 <span>/month</span></h2>
-            <a href="#" class="btn">Rent Now</a>
-        </div>
-    </div>
-</section>
-<!--elzaabout-->
-<section class="about" id="about">
-    <div class="heading">
-        <span>About Us</span>
-        <h1>Best Customer Experience</h1>
-    </div>
-    <div class="about-container">
-        <div class="about-img">
-            <img src="about.avif" alt="">
-        </div>
-        <div class="about-text">
-            <span>About Us</span>
-            <p>Welcome to our car rental website, your trusted partner for reliable and affordable car rentals. Whether it's a weekend getaway, a family vacation, or a business trip, we have the perfect vehicle for your journey.</p>
-            <p>Our mission is to make car rentals easy, accessible, and hassle-free. With a diverse fleet of well-maintained vehicles, competitive pricing, and flexible rental terms, we're here to ensure your travel plans go smoothly. From compact cars to spacious SUVs, we've got you covered.</p>
-            <p>Your comfort and safety are our top priorities. Every vehicle is regularly inspected and sanitized to meet the highest standards. Plus, with our friendly customer support team available 24/7, help is always just a call away.</p>
-            <p>Thank you for choosing our website. Let's hit the road together! Whether it's a short trip or a grand adventure, we're here to make your travels unforgettable. </p>
-            <a href="#" class="btn">Learn More</a>
-        </div>
-    </div>
 </section>
 
 
