--- a/ride.html
+++ b/ride.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+
+    <!--<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>-->
 </head>
 <body>
     <header>
@@ -72,6 +74,38 @@
      </form>
     </div>
    </div>
+   <Section class="ride" id="ride">
+
+    <div class="heading">
+    <span>How it works</span>
+    <h1>Rent With 3 Easy Steps</h1>
+    </div>
+    <div class="ride-container">
+        <div class="box">
+    <i class='bx bx-map'></i>
+    <h2>Choose A Location</h2>
+    <p>Select the city where you would like to start your journey by picking up your rental car or conveniently return it at the end of your trip.</p>
+    </div>
+    </div>
+
+    <div class="ride-container">
+        <div class="box">
+        <i class='bx bx-calendar-edit' ></i>
+    <h2>Pick-Up Date</h2>
+    <p>Choose your desired pick-up and return dates to customize your rental based on the days you need the car.</p>
+    </div>
+    </div>
+
+    <div class="ride-container">
+        <div class="box">
+            <i class='bx bxs-car-garage'></i>
+    <h2>Book A Car</h2>
+    <p>Reserve your car today to guarantee the ideal vehicle, ensuring a comfortable and hassle-free travel experience.</p>
+    </div>
+    </div>
+
+</Section>
+
 
    <script src="main.js"></script>
    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
