--- a/about.html
+++ b/about.html
@@ -93,6 +93,16 @@
         </div>
     </div>
 </section>
+<footer>
+    <div class="copyright">
+        <p>© 2024 Car Rental. All rights reserved.</p>
+        <div class="social">
+            <a href="#"><i class='bx bxl-facebook'></i></a>
+            <a href="#"><i class='bx bxl-twitter'></i></a>
+            <a href="#"><i class='bx bxl-instagram'></i></a>
+        </div>
+    </div>
+</footer>
 
    <script src="main.js"></script>
    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
