--- a/reviews.html
+++ b/reviews.html
@@ -72,6 +72,73 @@
      </form>
     </div>
    </div>
+   <section class="reviews" id="reviews">
+    <div class="heading">
+        <span>Reviews</span>
+        <h1>Trusted by Thousands of Customers</h1>  
+    </div>
+    <div class="reviews-container">
+        <div class="box">
+            <div class="rev-img">
+                <img src="rev1.jpg" alt="">
+            </div>
+            <h2>Daniel</h2>
+            <div class="stars">
+                <i class='bx bxs-star'></i>
+                <i class='bx bxs-star'></i>
+                <i class='bx bxs-star'></i>
+                <i class='bx bxs-star'></i>
+                <i class='bx bxs-star-half' ></i>
+            </div>
+            <p>The car options are fantastic, and the prices are super competitive. I appreciated the flexibility with pick-up and return dates. Will definitely use this service again!</p>
+        </div>
+        <div class="box">
+            <div class="rev-img">
+                <img src="rev2.jpg" alt="">
+            </div>
+            <h2>Andrea</h2>
+            <div class="stars">
+                <i class='bx bxs-star'></i>
+                <i class='bx bxs-star'></i>
+                <i class='bx bxs-star'></i>
+                <i class='bx bxs-star'></i>
+                <i class='bx bxs-star-half' ></i>
+            </div>
+            <p>I loved how easy it was to book a car! The website is clean and intuitive, and I found everything I needed within minutes. Highly recommended!</p>
+        </div>
+        <div class="box">
+            <div class="rev-img">
+                <img src="rev3.jpg" alt="">
+            </div>
+            <h2>Liam</h2>
+            <div class="stars">
+                <i class='bx bxs-star'></i>
+                <i class='bx bxs-star'></i>
+                <i class='bx bxs-star'></i>
+                <i class='bx bxs-star'></i>
+                <i class='bx bxs-star'></i>
+            </div>
+            <p>The design of the website is sleek and modern. Navigating through locations, dates, and car types was a breeze. The attention to detail really stands out!</p>
+        </div>
+    </div>
+   </section>
+   <section class="newsletter">
+    <h2>Subscribe To Newsletter</h2>
+    <div class="box">
+        <input type="text" placeholder="Enter Your Email...">
+        <a href="#" class="btn">Subscribe</a>
+    </div>
+   </section>
+   <footer>
+    <div class="copyright">
+        <p>© 2024 Car Rental. All rights reserved.</p>
+        <div class="social">
+            <a href="#"><i class='bx bxl-facebook'></i></a>
+            <a href="#"><i class='bx bxl-twitter'></i></a>
+            <a href="#"><i class='bx bxl-instagram'></i></a>
+        </div>
+    </div>
+</footer>
 
    <script src="main.js"></script>
    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
