--- a/Website.html
+++ b/Website.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo"><img src="logo.png" alt="" srcset=""></a>
+        <a href="#" class="logo"><img src="logo.png" alt="logo" ></a>
 
         <div class="bx bx-menu" id="menu-icon"></div>
 
@@ -87,20 +87,20 @@
 
         </div>
         <div class="form-container">
-            <form action="">
+            <form >
                 <div class="input-box">
                     <span>Location</span>
-                    <input type="search" name="" id="" placeholder="Search Places">
+                    <input type="text" placeholder="Search Places" required>
                 </div>
                 <div class="input-box">
                     <span>Pick-Up Date</span>
-                    <input type="date" name="" id="">
+                    <input type="date" required>
                 </div>
                 <div class="input-box">
                     <span>Return Date</span>
-                    <input type="date" name="" id="">
+                    <input type="date"required>
                 </div>
-                <input type="submit" name="" id="" class="btn">
+                <input type="submit" class="btn" value="Search">
             </form>
         </div>
 </section>
